<?xml version="1.0"?>
<package>
  <name>husky_viz</name>
  <version>0.1.0</version>
  <description>Clearpath Husky A200 visualization configurations</description>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roslaunch</build_depend>

  <run_depend>husky_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
